--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Mavrito Lana Dere</h2>
+                    <h2 class="w-title">Cryptography</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Cryptography and Network Security</span>
                     </div>
